syntax = "proto3";

option csharp_namespace = "GSTORE_Client";

package gstoreservices;

service GStoreServerServices {
	rpc Read (ReadRequest) returns (ReadReply);
	rpc Write (WriteRequest) returns (WriteReply);
}

message ReadRequest {
	string key = 1;
}

message ReadReply {
	bool success = 1;
	string value = 2;
}

message WriteRequest {
	string key = 1;
	string value = 2;
}

message WriteReply {
  bool success = 1;
  string message = 2;
}